<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.openmrs.module</groupId>
	<artifactId>addresshierarchy</artifactId>
	<version>2.22.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Address Hierarchy</name>
	<description>Parent project for Address Hierarchy</description>

	<url>http://openmrs.org</url>

	<scm>
		<connection>scm:git:git@github.com:openmrs/openmrs-module-addresshierarchy.git</connection>
		<developerConnection>scm:git:git@github.com:openmrs/openmrs-module-addresshierarchy.git</developerConnection>
		<url>https://github.com/openmrs/openmrs-module-addresshierarchy</url>
		<tag>HEAD</tag>
	</scm>
	
	<distributionManagement>
		<repository>
			<id>openmrs-repo-modules</id>
			<name>Modules</name>
			<url>https://mavenrepo.openmrs.org/modules</url>
		</repository>
		<snapshotRepository>
			<id>openmrs-repo-snapshots</id>
			<name>OpenMRS Snapshots</name>
			<url>https://mavenrepo.openmrs.org/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>api</module>
		<module>omod</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>jar</type>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.openmrs.api</groupId>
				<artifactId>openmrs-api</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.openmrs.web</groupId>
				<artifactId>openmrs-web</artifactId>
				<version>${openMRSVersion}</version>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>org.openmrs.test</groupId>
				<artifactId>openmrs-test</artifactId>
				<version>${openMRSVersion}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<openMRSVersion>2.7.3</openMRSVersion>
		<openMRSMinorVersion>2.7</openMRSMinorVersion>
		<openMRSRuntimeVersion>2.7.3</openMRSRuntimeVersion>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<exti18nVersion>2.0.0-SNAPSHOT</exti18nVersion>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<target>8</target>
						<source>8</source>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.openmrs.maven.plugins</groupId>
					<artifactId>maven-openmrs-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<autoVersionSubmodules>true</autoVersionSubmodules>
						<tagNameFormat>@{project.version}</tagNameFormat>
					</configuration>
				</plugin>
				<plugin>
				    <groupId>org.apache.maven.plugins</groupId>
				    <artifactId>maven-surefire-plugin</artifactId>
				    <version>2.22.1</version>
				    <configuration>
				    	<argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
				    </configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>openmrs-repo</id>
			<name>OpenMRS Nexus Repository</name>
			<url>https://mavenrepo.openmrs.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<!-- different profiles for building/testing against different version of openmrs -->
	<profiles>
		<profile>
			<id>openmrs-1.9</id>
			
			<properties>
				<openMRSVersion>1.9.1</openMRSVersion>
				<openMRSMinorVersion>1.9</openMRSMinorVersion>
				<logicVersion>0.5</logicVersion>
			</properties>
			
			<dependencyManagement>
				<dependencies>
					<dependency>
						<groupId>org.openmrs.api</groupId>
						<artifactId>openmrs-api</artifactId>
						<version>${openMRSVersion}</version>
						<type>test-jar</type>
						<scope>test</scope>
					</dependency>
					<dependency>
						<groupId>org.openmrs.web</groupId>
						<artifactId>openmrs-web</artifactId>
						<version>${openMRSVersion}</version>
						<type>test-jar</type>
						<scope>test</scope>
					</dependency>
					<dependency>
						<groupId>org.openmrs.test</groupId>
						<artifactId>openmrs-test</artifactId>
						<version>${openMRSVersion}</version>
						<type>pom</type>
						<scope>test</scope>
					</dependency>
				</dependencies>
			</dependencyManagement>
		</profile>
		<profile>
			<id>openmrs-1.10</id>
			
			<properties>
				<openMRSVersion>1.10.6</openMRSVersion>
				<openMRSMinorVersion>1.10</openMRSMinorVersion>
			</properties>
		</profile>
	</profiles>

</project>
